unpackaged/config/ofm/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Universal Budget container for Outbound Funds: the budget a Funding Request carries, mirroring NPC Grantmaking's Budget object. Categories, periods, and values hang off it.</description>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>