unpackaged/config/ofm/objects/Budget__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>OFM_Budgets</relationshipName>
    <type>Lookup</type>
    <description>Owning account for account-based portal sharing; stamped by the clone. Not on layouts.</description>
</CustomField>