unpackaged/config/ofm/objects/Budget__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>The awarded or approved budget envelope; the Universal Budget grid maps it as the budget amount.</description>
    <inlineHelpText>The approved total for this budget.</inlineHelpText>
</CustomField>