unpackaged/config/ofm/objects/Budget__c/fields/Category_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Category_FormQualifiedApiName__c</fullName>
    <label>Category Form Override</label>
    <length>255</length>
    <type>Text</type>
    <description>Per-budget override of the Form used to edit the category records in the Universal Budget grid; the qualified Form developer name. Blank falls back to the Budget Configuration default.</description>
    <inlineHelpText>Qualified Form name to use for editing category records from this budget. Blank uses the configured default.</inlineHelpText>
</CustomField>