unpackaged/config/ofm/objects/Budget__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>What this budget covers; the Universal Budget grid renders it as the card subtitle via the mapped description field.</description>
    <inlineHelpText>Shown under the budget's name in the budget grid.</inlineHelpText>
</CustomField>