unpackaged/config/ofm/objects/Budget__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Last day of the overall budget window, mirroring NPC Grantmaking's Budget.PeriodEndDate.</description>
    <inlineHelpText>When this budget's overall window ends.</inlineHelpText>
</CustomField>