unpackaged/config/ofm/objects/Budget__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum total the budget must reach; the Universal Budget grid flags the budget until met. 0 means no minimum.</description>
    <inlineHelpText>Smallest allowed budget total. 0 = no minimum.</inlineHelpText>
</CustomField>