unpackaged/config/ofm/objects/Budget__c/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>The total being requested; the Universal Budget grid shows it as the Requested header metric and reconciles the grid total against it.</description>
    <inlineHelpText>The amount requested. The grid tracks allocation against this figure.</inlineHelpText>
</CustomField>