unpackaged/config/ofm/objects/Budget__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>First day of the overall budget window, mirroring NPC Grantmaking's Budget.PeriodStartDate.</description>
    <inlineHelpText>When this budget's overall window begins.</inlineHelpText>
</CustomField>