unpackaged/config/ofm/objects/Budget__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Lifecycle status of this budget, mirroring NPC Grantmaking's Budget.Status (Planned, Active, Archived).</description>
    <inlineHelpText>Where this budget is in its lifecycle.</inlineHelpText>
</CustomField>