unpackaged/config/ofm/objects/Budget__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <label>Submitted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>When checked, the Universal Budget grid renders the whole budget read-only. The component never sets this flag; org automation owns it.</description>
    <inlineHelpText>Check to lock this budget as submitted. Set by your org's workflow, never by the grid.</inlineHelpText>
</CustomField>