unpackaged/config/ofm/objects/Budget__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>What this budget covers, mirroring NPC Grantmaking's Budget.Type (Department, Program, Project).</description>
    <inlineHelpText>The kind of budget this is.</inlineHelpText>
</CustomField>