unpackaged/config/ofm/objects/Budget__c/fields/Value_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Value_FormQualifiedApiName__c</fullName>
    <label>Value Form Override</label>
    <defaultValue>&quot;%%%NAMESPACED_ORG%%%OFM_Value_Edit&quot;</defaultValue>
    <length>255</length>
    <type>Text</type>
    <description>Per-budget override of the Form used to edit the value records in the Universal Budget grid; the qualified Form developer name. Blank falls back to the Budget Configuration default.</description>
    <inlineHelpText>Qualified Form name to use for editing value records from this budget. Blank uses the configured default.</inlineHelpText>
</CustomField>