unpackaged/config/ofm/objects/Budget__c/fields/Variance_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Variance_Threshold__c</fullName>
    <label>Variance Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Percent variance between actual and budgeted at which the Universal Budget grid's reporting mode flags a line item for review. Blank or 0 uses the 10% default.</description>
    <inlineHelpText>Reporting mode flags line items whose variance reaches this percent. Blank = 10.</inlineHelpText>
</CustomField>