unpackaged/config/ofm/objects/Budget__c/fields/Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Violation_Details__c</fullName>
    <label>Violation Details</label>
    <length>32768</length>
    <type>Html</type>
    <description>Stamped by the Universal Budget package (#47, #101): a bulleted list, one breached limit per item, in the org default language, using the same wording as the grid's Review issues list. Mapped as the Budget Violation Details Field.</description>
    <inlineHelpText>What needs attention in this budget, one item per bullet.</inlineHelpText>
</CustomField>